@@ -35,17 +35,33 @@ _PREAMBLE_LENGTH = 4
 class FakeImportGraph(object):
   """Just enough of the ImportGraph interface to run tests."""
 
-  def __init__(self, source_files, provenance):
+  def __init__(self, source_files, provenance, source_to_deps):
     self.source_files = source_files
     self.provenance = provenance
+    self.source_to_deps = source_to_deps
 
-  def sorted_source_files(self):
-    return [[x] for x in self.source_files]
+  def deps_list(self):
+    return [(x, self.source_to_deps[x]) for x in reversed(self.source_files)]
 
 
 def make_runner(sources, dep, conf):
   conf.inputs = [m.full_path for m in sources]
   return pytype_runner.PytypeRunner(conf, dep)
+
+
+class TestResolvedFileToModule(unittest.TestCase):
+  """Test resolved_file_to_module."""
+
+  def test_basic(self):
+    resolved_file = ImportlabModule('foo/bar.py', 'bar.py', 'bar')
+    self.assertEqual(pytype_runner.resolved_file_to_module(resolved_file),
+                     Module('foo/', 'bar.py', 'bar', 'Local'))
+
+  def test_preserve_init(self):
+    resolved_file = ImportlabModule(
+        'foo/bar/__init__.py', 'bar/__init__.py', 'bar')
+    self.assertEqual(pytype_runner.resolved_file_to_module(resolved_file),
+                     Module('foo/', 'bar/__init__.py', 'bar.__init__', 'Local'))
 
 
 class TestDepsFromImportGraph(unittest.TestCase):
@@ -57,14 +73,28 @@ class TestDepsFromImportGraph(unittest.TestCase):
     b = ImportlabModule('/foo/bar/b.py', 'bar/b.py', 'bar.b')
     self.sources = [x.path for x in [init, a, b]]
     self.provenance = {x.path: x for x in [init, a, b]}
-    self.graph = FakeImportGraph(self.sources, self.provenance)
 
-  def testBasic(self):
-    deps = pytype_runner.deps_from_import_graph(self.graph)
+  def test_basic(self):
+    graph = FakeImportGraph(self.sources, self.provenance,
+                            collections.defaultdict(list))
+    deps = pytype_runner.deps_from_import_graph(graph)
     expected = [
-        [Module('/foo/', 'bar/__init__.py', 'bar.__init__')],
-        [Module('/foo/', 'bar/a.py', 'bar.a')],
-        [Module('/foo/', 'bar/b.py', 'bar.b')]
+        ((Module('/foo/', 'bar/__init__.py', 'bar.__init__'),), ()),
+        ((Module('/foo/', 'bar/a.py', 'bar.a'),), ()),
+        ((Module('/foo/', 'bar/b.py', 'bar.b'),), ()),
+    ]
+    self.assertEqual(deps, expected)
+
+  def test_duplicate_deps(self):
+    graph = FakeImportGraph(
+        self.sources, self.provenance,
+        collections.defaultdict(lambda: [self.sources[0]] * 2))
+    deps = pytype_runner.deps_from_import_graph(graph)
+    init = Module('/foo/', 'bar/__init__.py', 'bar.__init__')
+    expected = [
+        ((init,), (init,)),
+        ((Module('/foo/', 'bar/a.py', 'bar.a'),), (init,)),
+        ((Module('/foo/', 'bar/b.py', 'bar.b'),), (init,)),
     ]
     self.assertEqual(deps, expected)
 
@@ -228,13 +258,17 @@ class TestYieldSortedModules(TestBase):
     return file_utils.expand_path(d).rstrip(os.sep) + os.sep
 
   def assert_sorted_modules_equal(self, mod_gen, expected_list):
-    for expected_mod, expected_report_errors, expected_stage in expected_list:
+    for (expected_mod,
+         expected_report_errors,
+         expected_deps,
+         expected_stage) in expected_list:
       try:
-        mod, actual_report_errors, actual_stage = next(mod_gen)
+        mod, actual_report_errors, actual_deps, actual_stage = next(mod_gen)
       except StopIteration:
         raise AssertionError('Not enough modules')
-      self.assertEqual(mod, Module(*expected_mod))
+      self.assertEqual(mod, expected_mod)
       self.assertEqual(actual_report_errors, expected_report_errors)
+      self.assertEqual(actual_deps, expected_deps)
       self.assertEqual(actual_stage, expected_stage)
     try:
       next(mod_gen)
@@ -249,10 +283,10 @@ class TestYieldSortedModules(TestBase):
     d = self.normalize('foo/')
     conf.pythonpath = [d]
     f = Module(d, 'bar.py', 'bar')
-    runner = make_runner([f], [[f]], conf)
+    runner = make_runner([f], [((f,), ())], conf)
     self.assert_sorted_modules_equal(
         runner.yield_sorted_modules(),
-        [((d, 'bar.py', 'bar'), Action.CHECK, Stage.SINGLE_PASS)])
+        [(f, Action.CHECK, (), Stage.SINGLE_PASS)])
 
   def test_source_and_dep(self):
     conf = self.parser.config_from_defaults()
@@ -260,11 +294,11 @@ class TestYieldSortedModules(TestBase):
     conf.pythonpath = [d]
     src = Module(d, 'bar.py', 'bar')
     dep = Module(d, 'baz.py', 'baz')
-    runner = make_runner([src], [[dep], [src]], conf)
+    runner = make_runner([src], [((dep,), ()), ((src,), (dep,))], conf)
     self.assert_sorted_modules_equal(
         runner.yield_sorted_modules(),
-        [((d, 'baz.py', 'baz'), Action.INFER, Stage.SINGLE_PASS),
-         ((d, 'bar.py', 'bar'), Action.CHECK, Stage.SINGLE_PASS)])
+        [(dep, Action.INFER, (), Stage.SINGLE_PASS),
+         (src, Action.CHECK, (dep,), Stage.SINGLE_PASS)])
 
   def test_cycle(self):
     conf = self.parser.config_from_defaults()
@@ -272,20 +306,20 @@ class TestYieldSortedModules(TestBase):
     conf.pythonpath = [d]
     src = Module(d, 'bar.py', 'bar')
     dep = Module(d, 'baz.py', 'baz')
-    runner = make_runner([src], [[dep, src]], conf)
+    runner = make_runner([src], [((dep, src), ())], conf)
     self.assert_sorted_modules_equal(
         runner.yield_sorted_modules(),
-        [((d, 'baz.py', 'baz'), Action.INFER, Stage.FIRST_PASS),
-         ((d, 'bar.py', 'bar'), Action.INFER, Stage.FIRST_PASS),
-         ((d, 'baz.py', 'baz'), Action.INFER, Stage.SECOND_PASS),
-         ((d, 'bar.py', 'bar'), Action.CHECK, Stage.SECOND_PASS)])
+        [(dep, Action.INFER, (), Stage.FIRST_PASS),
+         (src, Action.INFER, (), Stage.FIRST_PASS),
+         (dep, Action.INFER, (dep, src), Stage.SECOND_PASS),
+         (src, Action.CHECK, (dep, src), Stage.SECOND_PASS)])
 
   def test_non_py_dep(self):
     conf = self.parser.config_from_defaults()
     d = self.normalize('foo/')
     conf.pythonpath = [d]
     dep = Module(d, 'bar.so', 'bar')
-    runner = make_runner([], [[dep]], conf)
+    runner = make_runner([], [((dep,), ())], conf)
     self.assert_sorted_modules_equal(runner.yield_sorted_modules(), [])
 
   def test_system_dep(self):
@@ -295,10 +329,10 @@ class TestYieldSortedModules(TestBase):
     conf.pythonpath = [d]
     mod = (external, 'bar/baz.py', 'bar.baz', 'System')
     dep = Module(*mod)
-    runner = make_runner([], [[dep]], conf)
+    runner = make_runner([], [((dep,), ())], conf)
     self.assert_sorted_modules_equal(
         runner.yield_sorted_modules(),
-        [(mod, Action.GENERATE_DEFAULT, Stage.SINGLE_PASS)])
+        [(mod, Action.GENERATE_DEFAULT, (), Stage.SINGLE_PASS)])
 
 
 class TestNinjaPreamble(TestBase):
@@ -424,7 +458,8 @@ class TestNinjaBody(TestBase):
     dep = Module('', 'bar.py', 'bar')
     with file_utils.Tempdir() as d:
       self.conf.output = d.path
-      runner = make_runner([src], [[dep], [src]], self.conf)
+      runner = make_runner(
+          [src], [((dep,), ()), ((src,), (dep,))], self.conf)
       runner.setup_build()
       with open(runner.ninja_file, 'r') as f:
         body = f.read().splitlines()[_PREAMBLE_LENGTH:]
@@ -448,7 +483,8 @@ class TestNinjaBody(TestBase):
     dep = Module('', 'bar.py', 'bar', 'System')
     with file_utils.Tempdir() as d:
       self.conf.output = d.path
-      runner = make_runner([src], [[dep], [src]], self.conf)
+      runner = make_runner(
+          [src], [((dep,), ()), ((src,), (dep,))], self.conf)
       runner.setup_build()
       with open(runner.ninja_file, 'r') as f:
         body = f.read().splitlines()[_PREAMBLE_LENGTH:]
@@ -458,7 +494,7 @@ class TestNinjaBody(TestBase):
         output=os.path.join(runner.pyi_dir, 'foo.pyi'),
         action=Action.CHECK,
         input='foo.py',
-        deps='',
+        deps=' | ' + os.path.join(runner.pyi_dir, 'bar.pyi'),
         pythonpath=runner.pyi_dir,
         module='foo'))
     self.assertEqual(bar_pyi, pytype_runner.DEFAULT_PYI)
@@ -468,7 +504,8 @@ class TestNinjaBody(TestBase):
     dep = Module('', 'bar.py', 'bar')
     with file_utils.Tempdir() as d:
       self.conf.output = d.path
-      runner = make_runner([src], [[dep, src]], self.conf)
+      runner = make_runner(
+          [src], [((dep, src), ())], self.conf)
       runner.setup_build()
       with open(runner.ninja_file, 'r') as f:
         body = f.read().splitlines()[_PREAMBLE_LENGTH:]
@@ -483,21 +520,23 @@ class TestNinjaBody(TestBase):
         output=os.path.join(runner.pyi_1_dir, 'foo.pyi'),
         action=Action.INFER,
         input='foo.py',
-        deps=' | ' + os.path.join(runner.pyi_1_dir, 'bar.pyi'),
+        deps='',
         pythonpath=runner.pyi_dir,
         module='foo'))
     self.assertBuildStatementMatches(body[6:9], ExpectedBuildStatement(
         output=os.path.join(runner.pyi_dir, 'bar.pyi'),
         action=Action.INFER,
         input='bar.py',
-        deps=' | ' + os.path.join(runner.pyi_1_dir, 'foo.pyi'),
+        deps=' | %s %s' % (os.path.join(runner.pyi_1_dir, 'bar.pyi'),
+                           os.path.join(runner.pyi_1_dir, 'foo.pyi')),
         pythonpath=runner.pyi_dir + ':' + runner.pyi_1_dir,
         module='bar'))
     self.assertBuildStatementMatches(body[9:], ExpectedBuildStatement(
         output=os.path.join(runner.pyi_dir, 'foo.pyi'),
         action=Action.CHECK,
         input='foo.py',
-        deps=' | ' + os.path.join(runner.pyi_dir, 'bar.pyi'),
+        deps=' | %s %s' % (os.path.join(runner.pyi_dir, 'bar.pyi'),
+                           os.path.join(runner.pyi_1_dir, 'foo.pyi')),
         pythonpath=runner.pyi_dir + ':' + runner.pyi_1_dir,
         module='foo'))
 
@@ -508,7 +547,7 @@ class TestNinjaBody(TestBase):
       self.conf.output = d.path
       # When `src` is analyzed before `dep`, the second infer action on `dep`
       # should be skipped.
-      runner = make_runner([src], [[src, dep]], self.conf)
+      runner = make_runner([src], [((src, dep), ())], self.conf)
       runner.setup_build()
       with open(runner.ninja_file, 'r') as f:
         body = f.read().splitlines()[_PREAMBLE_LENGTH:]
@@ -523,14 +562,15 @@ class TestNinjaBody(TestBase):
         output=os.path.join(runner.pyi_1_dir, 'bar.pyi'),
         action=Action.INFER,
         input='bar.py',
-        deps=' | ' + os.path.join(runner.pyi_1_dir, 'foo.pyi'),
+        deps='',
         pythonpath=runner.pyi_dir,
         module='bar'))
     self.assertBuildStatementMatches(body[6:], ExpectedBuildStatement(
         output=os.path.join(runner.pyi_dir, 'foo.pyi'),
         action=Action.CHECK,
         input='foo.py',
-        deps=' | ' + os.path.join(runner.pyi_1_dir, 'bar.pyi'),
+        deps=' | %s %s' % (os.path.join(runner.pyi_1_dir, 'foo.pyi'),
+                           os.path.join(runner.pyi_1_dir, 'bar.pyi')),
         pythonpath=runner.pyi_dir + ':' + runner.pyi_1_dir,
         module='foo'))
 
