@@ -1,4 +1,5 @@
 Version (upcoming)
+* Get more precise deps from importlab to allow build parallelization.
 * Generate a build.ninja file and call pytype-single via ninja.
 
 Version 2018.10.30
